# aco

./: .gitignore  LICENSE  README.md  debug_routes.py  pyproject.toml
aco/: __init__.py  cli.py  path_display.py
aco/api/: __init__.py  main.py
aco/api/routes/: __init__.py  analyze.py  chat.py  intake.py  manifest.py  notebooks.py  reports.py  runs.py  scan.py  scripts.py  understanding.py
aco/engine/: __init__.py  chat.py  environment.py  executor.py  gemini.py  models.py  notebook.py  report.py  runs.py  scripts.py  strategy.py  understanding.py
aco/engine/modules/: __init__.py  barcode_validator.py  base.py  read_structure_checker.py  registry.py  sequencing_health.py
aco/manifest/: __init__.py  builder.py  models.py  scanner.py
aco/static/: index.html
aco/static/assets/: index-6YYc5vLk.css  index-BWo5MX4l.css  index-BhRwswAp.js  index-Bt0bn0ZT.js  index-C244ceqA.css  index-CJv5DHvA.css  index-COGxcVaE.css  index-CkAJzqWv.js  index-D7oBomLE.js  index-DECFXOXE.css  index-DF2OzBC8.js  index-DFRo3X2_.js  index-DYjWnfV9.js  index-D_O26Xwb.css  index-DnT-M4Zq.css  index-DouFkd25.js  index-DowHFBWd.js  index-HDeOg63w.css  index-ZLGe6Vpv.js  index-n2RvfQDl.css  index-xYbe3WyT.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  FileScanner.tsx  HypothesisForm.tsx  IntakeForm.tsx  ManifestViewer.tsx  NotebookEditor.tsx  PlotChooser.tsx  ReferenceSelector.tsx  (+8 more)
scripts/: build.py
tests/: test_batched_code_usage_generation.py  test_usage_instructions_builder.py
(+14 files in other folders)
