[project]
name = "aco"
version = "0.1.0"
description = "Agentic Sequencing Quality Control - Automate sequencing QC with LLM-driven understanding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",
    "watchfiles>=0.24.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
aco = "aco.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aco"]
artifacts = ["aco/static/*"]

[tool.hatch.build.targets.sdist]
include = ["aco", "frontend/dist"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
